data-xfer/main/default/objects/Object_Action__mdt/Object_Action__mdt.object-meta.xml
<CustomObject>
    <description>Holds information about how to perform a specific action (e.g. create, retrieve, update) a particular object in a particular data source.</description>
    <label>Object Action</label>
    <pluralLabel>Object Actions</pluralLabel>
</CustomObject>