data-xfer/main/default/objects/Object_Action__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>get</fullName>
                <default>true</default>
                <label>get</label>
            </value>
            <value>
                <fullName>query</fullName>
            </value>
            <value>
                <fullName>create</fullName>
            </value>
            <value>
                <fullName>update</fullName>
            </value>
            <value>
                <fullName>delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>