data-xfer/main/default/objects/Object_Action__mdt/fields/Extras__c.field-meta.xml
<CustomField>
    <fullName>Extras__c</fullName>
    <description>A json representation of any relevant options</description>
    <label>Extras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>