data-xfer/main/default/objects/Object_Action__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>Object__mdt</referenceTo>
    <relationshipLabel>Object Actions</relationshipLabel>
    <relationshipName>Object_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>