data-xfer/main/default/objects/Object_Action__mdt/validationRules/Path_begins_with_slash.validationRule-meta.xml
<ValidationRule>
    <fullName>Path_begins_with_slash</fullName>
    <active>true</active>
    <errorConditionFormula>!BEGINS( Path__c ,&quot;/&quot;)</errorConditionFormula>
    <errorMessage>The path field must begin with a slash character</errorMessage>
</ValidationRule>